cmake_minimum_required(VERSION 3.10)

project(maya VERSION 6.40)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(clips
	Agenda.h
	Analysis.h
	ArgumentAccess.h
	BasicMathFunctions.h
	BasicRuleCommands.h
	BinaryLoad.h
	BinarySave.h
	ClassFunctions.h
		clips.h
	CommandLine.h
	ConflictResolutionStrategy.h
	Constants.h
		Constraint.h
		Construct.h
	ConstructProfilingFunctions.h
	DefaultAttribute.h
	DeffactsBasicCommands.h
	DeffactsBinarySaveLoad.h
	Deffacts.h
	DeffactsParser.h
	DeffunctionBinaryLoadSave.h
	DeffunctionExecution.h
	Deffunction.h
	DeffunctionParser.h
	DefglobalBasicCommands.h
	DefglobalBinary.h
	DefglobalCommands.h
	Defglobal.h
	DefglobalParser.h
	DefinstancesBinaryLoadSave.h
	Definstances.h
	DefmessageHandlerCommands.h
	DefmessageHandlerDispatch.h
	DefmessageHandlerFunctions.h
	DefmessageHandlerParser.h
	DefModuleBasicCommands.h
	DefmoduleBinarySaveLoad.h
	Defmodule.h
	DefmoduleParser.h
	DefmoduleUtility.h
	Defrule.h
	DeftemplateBasicCommands.h
	DeftemplateBinarySaveLoad.h
	DeftemplateFunctions.h
	Deftemplate.h
	DeftemplateLHS.h
	DeftemplateParser.h
	DeftemplateRHSParsing.h
	DeftemplateUtilities.h
	Developer.h
	Drive.h
	Engine.h
	Entities.h
	Environment.h
	Evaluation.h
	Expression.h
	ExtendedMathFunctions.h
	ExternalFunctions.h
		Fact.h
	File.h
	Generate.h
	GenericFunctionBinaryLoadSave.h
	GenericFunctionCommands.h
	GenericFunctionExecution.h
	GenericFunction.h
	GenericFunctionParser.h
	ImplicitSystemMethodsParsing.h
	IncrementalReset.h
	InferenceEngineObjectAccessRotuines.h
	InferenceEngineObjectParsingRoutines.h
	InstanceCommand.h
	InstanceFunctions.h
	InstanceManager.h
	InstanceModifyAndDuplicate.h
	InstanceMultifieldTypeSlot.h
	InstanceParser.h
	InstanceQuery.h
	InstanceSaveLoadCommands.h
	InstanceSetQueryParser.h
	IOFunctions.h
	LogicalDependencies.h
	Match.h
	MayaExtensions.h
	MayaSetup.h
	MemoryAllocation.h
	MiscFunctions.h
	Multifield.h
	MultipleInheritanceParser.h
	Network.h
	ObjectBinaryLoadSave.h
	Object.h
	ObjectPatternMatcher.h
	ObjectReteBinarySaveLoad.h
	ObjectReteMatch.h
	OperatingSystemShim.h
	ParsingFunctions.h
	Pattern.h
	Platform.h
	PredicateFunctions.h
	PrettyPrint.h
	PrintUtility.h
	ProceduralCodeSupportRoutines.h
	ProceduralFunctions.h
	ProceduralFunctionsParser.h
		ReferenceCounted.h
	Reorder.h
	ReteUtility.h
	Retract.h
	Router.h
	RuleBinarySaveLoad.h
	RuleBuild.h
	RuleCommands.h
	RuleConstraints.h
	RuleDelete.h
	RuleLHSParsing.h
	RuleParser.h
	Scanner.h
	Setup.h
	SortingFunctions.h
	StringFunctions.h
	StringRouter.h
	Symbol.h
	SystemDependency.h
	UserData.h
	UserSetup.h
	Utility.h
	Watch.h
		#Agenda.cc
		CommandLine.cc
		Environment.cc
		Evaluation.cc
		Expression.cc
		FileUtilities.cc
		MemoryAllocation.cc
		ReferenceCounted.cc
		SystemDependency.cc
		UserFunctions.cc
		Utility.cc
		PrintUtility.cc
		Router.cc
		#Analysis.cc
		ArgumentAccess.cc
		#BinaryLoad.cc
		BasicMathFunctions.cc
		#BinarySave.cc
		#ClassCommands.cc
		#ClassExamination.cc
		#ClassFunctions.cc
		#ClassInfo.cc
		ClassInitialization.cc
		#ClassParser.cc
		#ClassSlotParser.cc
		Construct.cc
		Constraint.cc
		#ConflictResolutionStrategy.cc
		#ConstructBinaryLoadSave.cc
		#ConstructCommand.cc
		ConstructParser.cc
		#ConstraintBinaryLoadSave.cc
		#ConstraintChecking.cc
		#ConstraintOperations.cc
		#ConstraintParser.cc
		#ConstraintUtilities.cc
		#DefaultAttribute.cc
		#Definstances.cc
		#Developer.cc
		#DeffactsBinarySaveLoad.cc
		DeffactsBasicCommands.cc
		Deffacts.cc
		#DeffactsParser.cc
		#DeffunctionBinaryLoadSave.cc
		#DeffunctionExecution.cc
		Deffunction.cc
		#DeffunctionParser.cc
		#DefinstancesBinaryLoadSave.cc
		#Drive.cc
		ExtendedMathFunctions.cc
		#Engine.cc
		#ExpressionBinary.cc
		ExpressionOperations.cc
		ExpressionParser.cc
		ExternalFunctions.cc
		#FactBinarySaveLoad.cc
		#FactBuild.cc
		#FactCommands.cc
		#FactLoadSaveRoutines.cc
		#FactFunctions.cc
		#FactReteFunctionGeneration.cc
		#FactHashing.cc
		#FactLHSPatternParsing.cc
		#FactMatch.cc
		#FactManager.cc
		#FactRetePrintFunctions.cc
		#FactSetQueriesParser.cc
		#FactQuery.cc
		#FactReteAccessFunctions.cc
		#FactRHSPatternParser.cc
		File.cc
		#FileRouter.cc
		#Generate.cc
		#GenericFunctionBinaryLoadSave.cc
		GenericFunctionCommands.cc
		#GenericFunctionExecution.cc
		GenericFunction.cc
		#GenericFunctionParser.cc
		#DefglobalBinary.cc
		#DefglobalBasicCommands.cc
		#DefglobalCommands.cc
		Defglobal.cc
		#DefglobalParser.cc
		#ImplicitSystemMethodsParsing.cc
		#IncrementalReset.cc
		#MultipleInheritanceParser.cc
		#InstanceCommand.cc
		#InstanceSaveLoadCommands.cc
		InstanceFunctions.cc
		#InstanceManager.cc
		#InstanceModifyAndDuplicate.cc
		#InstanceMultifieldTypeSlot.cc
		#InstanceParser.cc
		#InstanceQuery.cc
		#InstanceSetQueryParser.cc
		IOFunctions.cc
		#LogicalDependencies.cc
		MiscFunctions.cc
		#DefmoduleBinarySaveLoad.cc
		#DefModuleBasicCommands.cc
		Defmodule.cc
		#DefmoduleParser.cc
		DefmoduleUtility.cc
		#DefmessageHandlerCommands.cc
		#DefmessageHandlerFunctions.cc
		#DefmessageHandlerDispatch.cc
		#DefmessageHandlerParser.cc
		Multifield.cc
		MultifieldFunctions.cc
		#ObjectBinaryLoadSave.cc
		#ObjectReteBinarySaveLoad.cc
		#ObjectPatternMatcher.cc
		#InferenceEngineObjectAccessRoutines.cc
		#InferenceEngineObjectParsingRoutines.cc
		#ObjectReteMatch.cc
		ParsingFunctions.cc
		#Pattern.cc
		PrettyPrint.cc
		ProceduralCodeSupportRoutines.cc
		ProceduralFunctions.cc
		ProceduralFunctionsParser.cc
		PredicateFunctions.cc
		ConstructProfilingFunctions.cc
		#Reorder.cc
		#ReteUtility.cc
		#Retract.cc
		#RuleBinarySaveLoad.cc
		#RuleBuild.cc
		#BasicRuleCommands.cc
		#RuleCommands.cc
		#RuleConstraints.cc
		Defrule.cc
		#RuleDelete.cc
		#RuleLHSParsing.cc
		#RuleParser.cc
		Scanner.cc
		SortingFunctions.cc
		StringFunctions.cc
		StringRouter.cc
		#SymbolBinarySave.cc
		Symbol.cc
		#DeftemplateBinarySaveLoad.cc
		#DeftemplateBasicCommands.cc
		Deftemplate.cc
		#DeftemplateFunctions.cc
		#DeftemplateLHS.cc
		#DeftemplateParser.cc
		#DeftemplateRHSParsing.cc
		#DeftemplateUtilities.cc
		UserData.cc
		Watch.cc
		CLIPSValue.cc Entities.cc)
add_library(maya_extensions
		BoostExtensions.h
		#BoostExtensions.cc
		#FunctionalExtensions.cpp
		FunctionalExtensions.h
		MayaExtensions.cc
		InstanceExtensions.h
		ExternalAddressTracker.h
		Problem.h
		)
# TODO express the configurable dependencies in setup.h using CMAKE instead
add_executable(maya cmd/repl/main.cc)
target_link_libraries(maya PUBLIC
	boost_system
	boost_filesystem
	clips
	maya_extensions)
target_include_directories(maya PUBLIC "${PROJECT_SRC_DIR}")
